# urss-parallel-computing

./: .Rprofile  .gitignore  .gitignore.swp  .gitmodules  README.md  from200to5000.rds
R/: Basics of linear regression.Rmd  Basics of linear regression.nb.html  Basics_of_linear_regression.html  Finding split groups.Rmd  Importance_of_tails.Rmd  Locks and barriers.Rmd  Output.Rmd  PC with R introduction multicore.Rmd  PC with R introduction multicore.nb.html  Random_graph_generation.Rmd  Random_graph_generation.nb.html  Test distances.Rmd  Test distances.nb.html  Timing machine.Rmd  Timing machine.nb.html  Tutorial on igraph.Rmd  barrnumleft.desc  classic_runtimes.csv  from200to5000.rds  runtimes.csv  tot.desc
R/Calling C/: Calling C and Python.Rmd  Calling C and Python.nb.html
R/bspFunctions/: DESCRIPTION
R/bspFunctions/R/: graphFromDist.R  graphGenerator.R  runOnSizes.R  (+1 more)
R/bspLib/: DESCRIPTION
R/intro/: igraph intro.Rmd
R/machine_learning/: PORTGEN-concorde.csv  feat-short.csv
R/papers/: Random_graph_generation.Rmd
cpp/: CMakeLists.txt  main.cpp  sample_main  sample_main.cpp
cpp/R/: .Generate_barabasi.R.swp  Generate_barabasi.R  Generate_barabasi_small.R  Generate_lnrom.R  graph_from_distr.R
cpp/include/: Graph.h  RunRecord.h  Timer.h  algorithms.h  parallel.h  printing.h  public.h  tails.h
cpp/output/: extra_super_out.csv  joshua.csv  o1.csv  o2.csv  super_out.csv  test_run.csv
cpp/src/: RunRecord.cpp  algorithms.cpp  graphIO.cpp  parallel.cpp
cpp/tests/: stub_run.csv  tBitset.cpp  tRecords.cpp  tests.cpp  tgraphIO.cpp
data/: bigres.rds  bigres2.rds  from200to5000.rds
java/: application.conf  build.sbt  pom.xml  supervision model.txt
java/project/: plugins.sbt
src/: POETS input analysis.Rmd  POETS input analysis.nb.html  Timing machine.Rmd  Timing machine.nb.html  barrsense.desc
src/Calling C/: Bitset.cpp  Bitset.h  Calling C and Python.Rmd  Calling C and Python.nb.html  bfs.cpp  bfs_from_R.cpp  doubler2.c  doubler3.cpp  main  main.cpp  original-bfs  original-bfs.c  their_bfs.cpp
src/bspLib/: .Rprofile  DESCRIPTION  NAMESPACE
src/cpp/: Bitset.cpp  Bitset.h  CMakeLists.txt  agent_based_bfs.md  agent_based_bfs.pseudo  algorithms.cpp  algorithms.h  alt-main.cpp  bfs  bfs.cpp  bitset.cpp  casp.cpp  convert_to_binary.cpp  doxyconfig.txt  graphIO.cpp  graphIO.h  main-tests.cpp  main.cpp  map-test  test-map
src/cpp/R/: Calling C and Python.nb.html  Generate with tails.Rmd  Generate with tails.nb.html  remove_isolated_nodes.R
src/cpp/data/: sample.graph.txt
src/cpp/include/: Bitset.h  Graph.h  RecordWriter.h  RunRecord.h  algorithms.h  graph.h  graphIO.h  printing.h  public.h  tails.h  tests.h
src/cpp/src/: Bitset.cpp  CMakeLists.txt  Graph.cpp  RecordWriter.cpp  RunRecord.cpp  Timer.cpp  algorithms.cpp  graphIO.cpp  tails.cpp
src/cpp/tests/: CMakeLists.txt  tBitset.cpp  tGraph.cpp  tRecords.cpp  tTails.cpp  tests.cpp  tests.h  tgraphIO.cpp
src/intro/: igraph intro.nb.html  lm intro.Rmd  lm intro.nb.html
src/machine_learning/: PORTGEN-feat.csv  ml.Rmd  ml.nb.html
src/papers/: Locks and barriers.nb.html  PC with R introduction.nb.html  Random_graph_generation.nb.html  Tutorial on igraph.nb.html  igraph_tutorial.nb.html
(+62 files in other folders)
